--- a/bin/dllogin.in
+++ b/bin/dllogin.in
@@ -25,12 +25,16 @@
 # Some CLIs having problems if we write too fast (Extreme, PIX, Cat)
 set send_human {.2 .1 .4 .2 1}
 
+# Initialise the platform to a reasonable default for this type of hardware
+# "" is a reasonable default if you don't need to use platform switching
+set defaultplatform ""
+
 @login_top@
 
 # Log into the firewall.
 # returns: 0 on success, 1 on failure
-proc login { router user userpswd passwd enapasswd prompt cmethod cyphertype identfile } {
-    global spawn_id in_proc do_command do_script sshcmd telnetcmd
+proc login { router user userpswd passwd enapasswd prompt cmethod cyphertype identfile platform } {
+    global spawn_id in_proc do_command do_script sshcmd telnetcmd defaultplatform
     set in_proc 1
     set uprompt_seen 0
 
@@ -266,7 +270,9 @@ set in_proc 0
 set exitval 0
 foreach router [lrange $argv $i end] {
     set router [string tolower $router]
-    send_user "$router\n"
+    # attempt at platform switching.
+    set platform $defaultplatform
+    send_user -- "$router (initial platform: \"$platform\")\n"
 
     # device timeout
     set timeout [find timeout $router]
@@ -340,11 +346,21 @@ foreach router [lrange $argv $i end] {
     set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
     if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
 
+    # Figure out if we have a platform hint
+    if {[info exists plat]} {
+	# command line platform
+	set platform $plat
+    } else {
+	set plat [find platform $router]
+	if { "$plat" ne "" } { set platform $plat }
+    }
+    send_user -- "$router (active platform: \"$platform\")\n"
+
     # if [-mM], skip do not login
     if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
-    if {[login $router $ruser $userpswd $passwd $enapasswd $prompt $cmethod $cyphertype $identfile]} {
+    if {[login $router $ruser $userpswd $passwd $enapasswd $prompt $cmethod $cyphertype $identfile $platform]} {
 	incr exitval
 	continue
     }
