--- a/bin/rblogin.in
+++ b/bin/rblogin.in
@@ -19,12 +19,16 @@ set timeoutdflt 45
 # Some CLIs having problems if we write too fast (Extreme, PIX, Cat)
 set send_human {.2 .1 .4 .2 1}
 
+# Initialise the platform to a reasonable default for this type of hardware
+# "" is a reasonable default if you don't need to use platform switching
+set defaultplatform ""
+
 @login_top@
 
 # Log into the router.
 # returns: 0 on success, 1 on failure, -1 if rsh was used successfully
-proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile } {
-    global command spawn_id in_proc do_command do_script platform passphrase
+proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile platform } {
+    global command spawn_id in_proc do_command do_script defaultplatform passphrase
     global prompt prompt_match u_prompt p_prompt e_prompt sshcmd telnetcmd
     set in_proc 1
     set uprompt_seen 0
@@ -495,8 +499,8 @@ set prompt_match ""
 foreach router [lrange $argv $i end] {
     set router [string tolower $router]
     # attempt at platform switching.
-    set platform ""
-    send_user -- "$router\n"
+    set platform $defaultplatform
+    send_user -- "$router (initial platform: \"$platform\")\n"
 
     # device timeout
     set timeout [find timeout $router]
@@ -639,11 +643,21 @@ foreach router [lrange $argv $i end] {
     set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
     if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
 
+    # Figure out if we have a platform hint
+    if {[info exists plat]} {
+        # command line platform
+        set platform $plat
+    } else {
+        set plat [find platform $router]
+        if { "$plat" ne "" } { set platform $plat }
+    }
+    send_user -- "$router (active platform: \"$platform\")\n"
+
     # if [-mM], skip do not login
     if { $do_cloginrcdbg > 0 } { continue; }
 
     # Login to the router
-    if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype $identfile]} {
+    if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype $identfile $platform]} {
 	incr exitval
 	# if login failed or rsh was unsuccessful, move on to the next device
 	continue
