--- a/bin/ulogin.in
+++ b/bin/ulogin.in
@@ -18,12 +18,16 @@ set timeoutdflt 30
 # Some CLIs having problems if we write too fast
 set send_human {.2 .1 .4 .2 1}
 
+# Initialise the platform to a reasonable default for this type of hardware
+# "" is a reasonable default if you don't need to use platform switching
+set defaultplatform ""
+
 @login_top@
 
 # Log into the router.
 # returns: 0 on success, 1 on failure
-proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile } {
-    global spawn_id in_proc do_command do_script passphrase
+proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile platform } {
+    global spawn_id in_proc do_command do_script defaultplatform passphrase
     global prompt u_prompt p_prompt e_prompt sshcmd telnetcmd
     set in_proc 1
 
@@ -351,7 +355,9 @@ if [catch {open /dev/tty w} ttyid] {
 }
 foreach router [lrange $argv $i end] {
     set router [string tolower $router]
-    send_user "$router\n"
+    # attempt at platform switching.
+    set platform $defaultplatform
+    send_user -- "$router (initial platform: \"$platform\")\n"
 
     # device timeout
     set timeout [find timeout $router]
@@ -490,6 +496,16 @@ foreach router [lrange $argv $i end] {
     set telnetcmd [join [lindex [find telnetcmd $router] 0] ""]
     if { "$telnetcmd" == "" } { set telnetcmd "@TELNET_CMD@" }
 
+    # Figure out if we have a platform hint
+    if {[info exists plat]} {
+	# command line platform
+	set platform $plat
+    } else {
+	set plat [find platform $router]
+	if { "$plat" ne "" } { set platform $plat }
+    }
+    send_user -- "$router (active platform: \"$platform\")\n"
+
     # if [-mM], skip do not login
     if { $do_cloginrcdbg > 0 } { continue; }
 
@@ -501,7 +517,7 @@ foreach router [lrange $argv $i end] {
     }
 
     # Login to the router
-    if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype $identfile]} {
+    if {[login $router $ruser $userpswd $passwd $enapasswd $cmethod $cyphertype $identfile $platform]} {
 	incr exitval
 	continue
     }
