--- a/bin/ograncid.in
+++ b/bin/ograncid.in
@@ -1,22 +1,7 @@
 #! @PERL5_PATH@
 ##
-## rancid 2.3.8
-## Copyright (C) 1997-2011 by Terrapin Communications, Inc.
-## All rights reserved.
-##
-## This software may be freely copied, modified and redistributed
-## without fee for non-commerical purposes provided that this license
-## remains intact and unmodified with any RANCID distribution.
-##
-## There is no warranty or other guarantee of fitness of this software.
-## It is provided solely "as is".  The author(s) disclaim(s) all
-## responsibility and liability with respect to this software's usage
-## or its effect upon hardware, computer systems, other software, or
-## anything else.
-##
-## Except where noted otherwise, rancid was written by and is maintained by
-## Henry Kilmer, John Heasley, Andrew Partan, Pete Whiting, and Austin Schutz.
-##
+## @PACKAGE@ @VERSION@
+@copyright@
 #
 #  RANCID - Really Awesome New Cisco confIg Differ
 #
