Ignore more DHCP and Smart Licensing files.
These also change periodically with no real intrinsic value in terms of
reporting changes.

--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -1230,8 +1230,8 @@ sub DirSlotN {
 	# to:
 	#       -rw-                                   vlan.dat
 	#       -rw-                                           vlan.dat
-	if (/(dhcp_[^. ]*\.txt|vlan\.dat|\slog|sflog|snooping|syslog)\s*$/ ||
-	    /(\sssd|tracelogs|throughput_monitor_params)\s*$/ ||
+	if (/(dhcp_[^. ]*(\.txt)?|vlan\.dat|sflog|snooping|syslog)\s*$/ ||
+	    /(\sssd|tracelogs|throughput_monitor_params|smart_overall_health\.log)\s*$/ ||
 	    /((?:private|startup|underlying)-config)\s*$/) {
 	    if (/(\s*\d+\s+)(\S+\s+)(\d+)(\s+)(\w+ \d+\s+\d+ \d+:\d+:\d+ .\d+:\d+)/) {
 		my($fn, $a, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $5, $');
