sros.pm: skip voltage in show chassis power-supply

--- a/lib/sros.pm.in
+++ b/lib/sros.pm.in
@@ -286,6 +286,7 @@ sub ShowChassisPS {
 	/^\[[^]]*]$/i && next;
 
 	/[-=]+$/i && next;
+	/input voltage/i && next;
 	ProcessHistory("COMMENTS","keysort","E4","# $_");
     }
 }
