fixes timestamps which are making new versions to be created on every rancid-run

--- a/lib/sros.pm.in
+++ b/lib/sros.pm.in
@@ -350,6 +350,7 @@ TOP: while (<$INPUT>) {
 	last if (/^$prompt/);
 	next if (/^(\s*$cmd\s*)$/);
 	next if (/^\s+\^$/);
+ 	next if (/^[A-Za-z]{3} [A-Za-z]{3} \d{1,2} \d{2}:\d{2}:\d{2} [A-Z]+ \d{4}$/);
 	return(-1) if (/error: invalid parameter/i);
 	return(-1) if (/minor: cli command not allowed for this user/i);
 	# context lines
