--- a/lib/sros.pm.in
+++ b/lib/sros.pm.in
@@ -152,6 +152,11 @@ sub ShowCardDetail {
 	next if (/^(Config file|BOF) last (saved|modified)\s+:/ &&
 		($filter_osc >= 2));
 
+        # remove varies in "show card detail"
+        next if (/^\s+Size\s+:\s+[\d,]+ (MB|GB)/);
+        next if (/^\s+Free\ space\s+:\s+[\d,]+\ (MB|GB)/);
+        next if (/Free\ space\s+:\s+[\d,]+\ (MB|GB)/);
+
 	# hardware data for the output head
 	# first serial number seen should be that of the chassis
 	if (!$snseen && /^\s+serial number\s+:\s+(\w+)/i) {
