--- a/lib/nxos.pm.in
+++ b/lib/nxos.pm.in
@@ -502,6 +502,9 @@ sub DirSlotN {
 	# Drop accounting.log*
 	/\s+accounting.log.*/ && next;
 
+        # Drop icamsql*
+        /\s+icamsql.*/ && next;
+
 	# Drop vtp_debug.log and vtp_debug_old.log CDETS bug CSCuy87611
 	/\s+vtp_debug(_old)?\.log$/ && next;
 
